Remove js alert

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
         document.getElementById("pwfieldout").value = pass;
         document.getElementById("pwfieldout").select();
         document.execCommand("copy");
-        alert(pass);
-        //window.close();
+        window.close();
       }
 
     </script>
